--- a/index.html
+++ b/index.html
@@ -73,12 +73,11 @@
             <div class="assignments-view" id="assignmentsView" style="display: none;">
                 <h2>📋 All Assignments</h2>
                 <div id="assignmentsList"></div>
-                <button id="resetButton" class="btn btn-reset">🔄 Reset All Assignments</button>
             </div>
         </div>
 
         <footer>
-            <button id="toggleViewButton" class="btn btn-secondary">👁️ View All Assignments</button>
+            <button id="toggleViewButton" class="btn btn-danger">⚠️ View All Assignments</button>
         </footer>
     </div>
 
